# Bakalarska_prace

./: -media-rih0075-HDDv02-Ubuntu-6.sem-Bakalarska_prace-app-utils-.txt  .dockerignore  .gitignore  BK_projekt.dbb  README.md  comments.md  create_admin.sh  install.sh  notionCode.txt  package-lock.json  run.py
Code/: readTest.cpp  run.txt  test.py  testV2.py
app/: BK_projekt.db  Poznamky.txt  app_factory.py  config.py  run.py
app/Func/: getSensoreData.py
app/models/: models.py
app/routes/: __init__.py  authRoute.py  backUpRoute.py  dashBoardRoute.py  modbusRoute.py  sensoreRoute.py  sensors.py  (+2 more)
backend/: .cache.sqlite  .env  Dockerfile  IMPROVEMENT_REMEDIATION_CHECKLIST.md  README.md  config.py  gunicorn_config.py  pyproject.toml  run.py
backend/models/: models.py
backend/routes/: __init__.py  authRoute.py  auth_route.py  backUpRoute.py  dashBoardRoute.py  dashboard_route.py  modbusRoute.py  modbus_route.py  sensorsRoute.py  sensors_route.py  user_route.py  weather_route.py  widgetRoute.py  widget_route.py
backend/services/: auth_service.py  backup_service.py  dashboard_service.py  modbus_service.py  sensor_service.py  user_service.py  weather_service.py  widget_service.py
backend/utils/: auth_utils.py  create_admin.py  get_sensore_data.py  modbusManagerNew.py  modbusManagerOld.py  modbus_manager.py  modbus_manager_new.py
backend/views/: auth_views.py
data/: data.csv  export.csv  test.csv  upraveni_data_csv.py  upraveny_data.csv
frontend/: .gitignore  Dockerfile  Recomendation.md  index.html  package-lock.json  package.json  vite.config.js
(+73 files in other folders)
